--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,9 +20,13 @@
     <string name="menu_home">Home</string>
     <string name="menu_profile">My profile</string>
     <string name="menu_equipment">Equipment</string>
+    <string name="menu_userList">Other users</string>
+    <string name="shop">Equipment shop</string>
 
     <string name="drawer_open">Open drawer</string>
     <string name="drawer_close">Close drawer</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
