--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="previous">Previous</string>
 
     <string name="menu_bossfight">Boss Fight</string>
+    <string name="onesignal_app_id">tvoj-onesignal-app-id</string>
 
 
     <string name="lorem_ipsum">
